# salt-ext-modules-vmware

./: .coveragerc  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  MANIFEST.in  NOTICE.txt  README.md  noxfile.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: release.yml  test.yml  test_publish.yml
.pre-commit-hooks/: check-cli-examples.py  make-autodocs.py
archive/: config_modules-0.0.3-py3-none-any.whl
changelog/: 256.added  291.added  306.fixed  315.added  321.added  323.added  327.added  327.removed  332.fixed  332.removed  333.added  334.added  334.fixed  348.added  350.added
docs/: all.rst  architecture.rst  conf.py  contributing.rst  credentials.rst  index.rst  nsx.rst  quickstart.rst  release.rst  utils.rst  vmc.rst  vsphere.rst
docs/architecture/: 20210519-building-docs.rst  20210901-build-test-deployment-pipeline.rst  20210909-service-instance.rst  20211028-esxi-get-vs-grains-get.rst  20211028-esxi-get-vs-grains.rst  20220926-config-layout.rst
docs/ref/: modules.rst  saltext.vmware.rst
docs/ref/modules/: all.rst  saltext.vmware.modules.cluster.rst  saltext.vmware.modules.cluster_drs.rst  saltext.vmware.modules.cluster_ha.rst  saltext.vmware.modules.compliance_control.rst  saltext.vmware.modules.content_library.rst  saltext.vmware.modules.controller_metadata.rst  saltext.vmware.modules.coredump.rst  saltext.vmware.modules.datacenter.rst  saltext.vmware.modules.datastore.rst  saltext.vmware.modules.disk.rst  saltext.vmware.modules.dvportgroup.rst  saltext.vmware.modules.dvs.rst  saltext.vmware.modules.dvswitch.rst  saltext.vmware.modules.esxi.rst  saltext.vmware.modules.extra.rst  saltext.vmware.modules.firewall.rst  saltext.vmware.modules.folder.rst  saltext.vmware.modules.info.rst  saltext.vmware.modules.license.rst  saltext.vmware.modules.license_mgr.rst  saltext.vmware.modules.nsxt_compute_manager.rst  saltext.vmware.modules.nsxt_edge_clusters.rst  saltext.vmware.modules.nsxt_ip_blocks.rst  saltext.vmware.modules.nsxt_ip_pools.rst  saltext.vmware.modules.nsxt_license.rst  saltext.vmware.modules.nsxt_manager.rst  saltext.vmware.modules.nsxt_policy_segment.rst  saltext.vmware.modules.nsxt_policy_tier0.rst  saltext.vmware.modules.nsxt_policy_tier1.rst  saltext.vmware.modules.nsxt_rest.rst  saltext.vmware.modules.nsxt_transport_node.rst  saltext.vmware.modules.nsxt_transport_node_profiles.rst  saltext.vmware.modules.nsxt_transport_zone.rst  saltext.vmware.modules.nsxt_uplink_profiles.rst  saltext.vmware.modules.ntp.rst  saltext.vmware.modules.roles.rst  saltext.vmware.modules.service.rst  saltext.vmware.modules.ssl_adapter.rst  saltext.vmware.modules.storage_policies.rst  (+27 more)
docs/ref/states/: all.rst  saltext.vmware.states.compliance_control.rst  saltext.vmware.states.content_library.rst  saltext.vmware.states.controller_metadata.rst  saltext.vmware.states.datacenter.rst  saltext.vmware.states.datastore.rst  saltext.vmware.states.drift_report.rst  saltext.vmware.states.esxi.rst  saltext.vmware.states.folder.rst  saltext.vmware.states.license_mgr.rst  saltext.vmware.states.nsxt_compute_manager.rst  saltext.vmware.states.nsxt_edge_clusters.rst  saltext.vmware.states.nsxt_ip_blocks.rst  saltext.vmware.states.nsxt_ip_pools.rst  saltext.vmware.states.nsxt_license.rst  saltext.vmware.states.nsxt_manager.rst  saltext.vmware.states.nsxt_policy_segment.rst  saltext.vmware.states.nsxt_policy_tier0.rst  saltext.vmware.states.nsxt_policy_tier1.rst  saltext.vmware.states.nsxt_transport_node.rst  saltext.vmware.states.nsxt_transport_node_profiles.rst  saltext.vmware.states.nsxt_transport_zone.rst  saltext.vmware.states.nsxt_uplink_profiles.rst  saltext.vmware.states.roles.rst  saltext.vmware.states.storage_policies.rst  saltext.vmware.states.tag.rst  saltext.vmware.states.vc.rst  saltext.vmware.states.vm.rst  saltext.vmware.states.vmc_dhcp_profiles.rst  saltext.vmware.states.vmc_distributed_firewall_rules.rst  saltext.vmware.states.vmc_nat_rules.rst  saltext.vmware.states.vmc_networks.rst  saltext.vmware.states.vmc_org_user.rst  saltext.vmware.states.vmc_org_users.rst  saltext.vmware.states.vmc_public_ip.rst  saltext.vmware.states.vmc_sddc.rst  saltext.vmware.states.vmc_security_groups.rst  saltext.vmware.states.vmc_security_rules.rst  saltext.vmware.states.vsphere.rst
docs/ref/utils/: all.rst  saltext.vmware.utils.cluster.rst  saltext.vmware.utils.common.rst  saltext.vmware.utils.connect.rst  saltext.vmware.utils.datacenter.rst  saltext.vmware.utils.esxi.rst  saltext.vmware.utils.vm.rst
poc_sls/vcenter/: apply_config.sls  check_compliance.sls  remediate.sls
requirements/: base.txt  tests.txt
src/saltext/vmware/: __init__.py  loader.py  version.py  version.py~fa01b1c8f25b3b0082f4cfc67505454552cd2861
tests/: conftest.py  helpers.py
tests/helpers/: __init__.py
tests/integration/: conftest.py  nsxt_config.json  test_esxi_host_capability.py  test_high_level.py  vmc_config.ini
tests/integration/modules/: test_cluster.py  test_datacenter.py  test_datastore.py  test_dvswitch.py  test_esxi.py  test_folder.py  test_license_mgr.py  test_nsxt_compute_manager.py  test_nsxt_ip_blocks.py  test_nsxt_ip_pools.py  test_nsxt_license.py  test_nsxt_manager.py  test_nsxt_transport_node.py  test_nsxt_transport_node_profiles.py  test_nsxt_transport_zone.py  test_nsxt_uplink_profiles.py  test_tag.py  test_vm.py  test_vmc_dhcp_profiles.py  test_vmc_distributed_firewall_rules.py  test_vmc_dns_forwarder.py  test_vmc_nat_rules.py  test_vmc_networks.py  test_vmc_org_users.py  test_vmc_public_ip.py  test_vmc_sddc.py  test_vmc_sddc_clusters.py  test_vmc_sddc_host.py  test_vmc_security_groups.py  test_vmc_security_rules.py  test_vmc_vcenter_stats.py  test_vmc_vm_disks.py  test_vmc_vm_stats.py  test_vsphere.py  test_vswitch.py
tests/integration/states/: test_datacenter.py  (+25 more)
tests/test_files/: centos-7-tools.ovf  privilege-descriptions.json  privileges.json  role-privilege-group-descriptions.json  sample.tar
tests/unit/: conftest.py  test_nothing.py
tools/: release.py  test_value_scraper.py  test_value_scraper_vmc.py
(+246 files in other folders)
