[metadata]
name = saltext.vmware
description = Salt Extension Modules for VMware
long_description = file: README.md
long_description_content_type = text/markdown
author = VMware, Inc.
author_email = joey@vmware.com
maintainer = Joey Gibson
maintainer_email = joey@vmware.com
keywords = salt-extension
url = https://docs.saltproject.io/salt/extensions/salt-ext-modules-vmware/en/latest/index.html
project_urls =
    Source=https://github.com/saltstack/salt-ext-modules-vmware
    Tracker=https://github.com/saltstack/salt-ext-modules-vmware/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.7
setup_requires =
    wheel
    setuptools>=50.3.2
    setuptools-declarative-requirements
install_requires =
    salt>=3005
    pyvmomi==8.0.1.0
    importlib_metadata; python_version < "3.8"
    jinja2>=3.1.0
    config-modules@https://github.com/saltstack/salt-ext-modules-vmware/raw/ramurugesan-unified-config-poc/src/saltext/vmware/archive/config_modules-0.0.4-py3-none-any.whl

[options.extras_require]
tests =
  pytest>=6.1.1
  pytest-cov
  pytest-salt-factories>=0.121.1
dev =
  nox
  towncrier==21.9.0rc1
release =
  twine
  wheel
  towncrier==21.9.0rc1
docs =
  sphinx
  furo
  sphinx-prompt
  sphinxcontrib-spelling
  importlib_metadata; python_version < "3.8"
  towncrier==21.9.0rc1


[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.vmware = saltext.vmware

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
