[metadata]
name = saltext.vmware
description = Salt Extension Modules for VMware
long_description = file: README.md
long_description_content_type = text/markdown
author = VMware, Inc.
author_email = joey@vmware.com
maintainer = Joey Gibson
maintainer_email = joey@vmware.com
keywords = salt-extension
url = https://docs.saltproject.io/salt/extensions/salt-ext-modules-vmware/en/latest/index.html
project_urls =
    Source=https://github.com/saltstack/salt-ext-modules-vmware
    Tracker=https://github.com/saltstack/salt-ext-modules-vmware/issues
license = Apache Software License
classifiers =
    Programming Language :: Python
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
platforms = any

[options]
zip_safe = False
include_package_data = True
package_dir =
    =src
packages = find_namespace:
python_requires = >= 3.10
setup_requires =
    wheel
    setuptools>=50.3.2
    setuptools-declarative-requirements
install_requires =
    salt>=3006
    setuptools<69.0,>=65.6.3
    pyvmomi==7.0.3
    jinja2>=3.1.0
    config_modules_vmware

[options.extras_require]
tests =
  pytest>=6.1.0
  pytest-cov
  pytest-salt-factories>=1.0.1
dev =
  nox
  towncrier==23.11.0
release =
  twine
  wheel
  towncrier==22.12.0
docs =
  sphinx
  furo
  sphinx-prompt
  sphinxcontrib-spelling
  towncrier==22.12.0


[options.packages.find]
where = src
exclude =
    tests

[options.entry_points]
salt.loader=
  saltext.vmware = saltext.vmware

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx
